--- a/app/package.json
+++ b/app/package.json
@@ -10,21 +10,31 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.8",
-    "react-dom": "16.8",
-    "react-is": "16.8",
-    "react-native": "0.70.6",
-    "styled-components": "^5.0.0"
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/geolocation": "^3.0.4",
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/stack": "^6.3.7",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-permissions": "^3.6.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-swiper": "^1.6.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0"
+    "@babel/core": "^7.20.5",
+    "@babel/runtime": "^7.20.6",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-jest": "^29.3.1",
+    "eslint": "^8.28.0",
+    "jest": "^29.3.1",
+    "metro-react-native-babel-preset": "^0.73.4",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
